--- a/index.html
+++ b/index.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>City Weather App</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>City Weather App</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-<body>
+  <body>
     <div class="container">
-        <h1>City Weather App</h1>
-        <input type="text" id="cityInput" placeholder="Enter city name">
-        <button onclick="getWeather()">Get Weather</button>
+        <h1>City Weather Application</h1>
+        <input type="text" id="cityInput" placeholder="Enter city name here">
+        <button class="btn">Get Weather</button>
         <div id="weatherDetails" class="hidden">
-            <div id="weatherIcon"></div>
-            <div id="weatherDescription"></div>
-            <div id="temperature"></div>
-            <div id="humidity"></div>
-        </div>
+            <div class ="row weather">
+              <div id="weatherIcon"></div>
+              <div id="weatherDescription"></div>
+            </div>
+            <div class ="row temperature">
+              <div id="tempratureIcon"></div>
+              <div id="temperature"></div>
+            </div>
+            <div class ="row humidity">
+              <div id="humidity"></div>
+            </div>
     </div>
-
-
-</body>
+    <div class="footer">
+        <h2>
+          This webpage provides you weather details for the City name you enter.
+        </h2>
+        <h3>
+          Developed by @Anubhav Pundir
+        </h3>
+    </div> 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="script.js" charset="utf-8"></script>
+  </body>
 </html>
