--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
         <h1>City Weather Application</h1>
         <input type="text" id="cityInput" placeholder="Enter city name here">
         <button class="btn">Get Weather</button>
-        <div id="weatherDetails" class="hidden">
-            <div class ="row weather">
-              <div id="weatherIcon"></div>
-              <div id="weatherDescription"></div>
+        <div id="weatherDetails">
+            <div class="row">
+              <div class="grid-item" id="weatherIcon"><img src="weatherIcons/clouds.png" alt="Clouds"></div>
+              <div class="grid-item" id="weatherDescription"><h3>Weather details are here</h3></div>
             </div>
-            <div class ="row temperature">
-              <div id="tempratureIcon"></div>
-              <div id="temperature"></div>
+            <div class="row">
+              <div class="grid-item" id="tempratureIcon"><img src="weatherIcons/hazy.png" alt="Hazy"></div>
+              <div class="grid-item" id="temperature"><h3>Temprature details are here</h3></div>
             </div>
-            <div class ="row humidity">
-              <div id="humidity"></div>
+            <div class="row">
+              <div class="grid-item"><img src="weatherIcons/humidity.png" alt="humiditydetail"></div>
+              <div class="grid-item" id="humidity"><h3> Humidity description is here </h3></div>
             </div>
-    </div>
+      </div>
     <div class="footer">
         <h2>
           This webpage provides you weather details for the City name you enter.
