--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>City Weather Application</h1>
         <input type="text" id="cityInput" placeholder="Enter city name here">
         <button class="btn">Get Weather</button>
-        <div id="weatherDetails">
+        <div id="weatherDetails" class="hidden">
             <div class="row">
               <div class="grid-item" id="weatherIcon"><img src="weatherIcons/clouds.png" alt="Clouds"></div>
               <div class="grid-item" id="weatherDescription"><h3>Weather details are here</h3></div>
